# FullDockerApp

./: pyproject.toml
geeksfullapp/app/: app.py  check.py
geeksfullapp/app/artifacts/htmltemps/: login.html
geeksfullapp/app/templates/: login.html
geeksfullapp/app/utils/: logger.py
