[tool.poetry]
name = "geeksfullapp"
version = "0.1.0"
description = ""
authors = ["Sai <ysaijagadeeshuh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
